--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Lichtblau">#4DA0FF</color>
+    <color name="Bernsteingelb">#FFC107</color>
+    <color name="Smaragdgrün">#2AA282</color>
+    <color name="Vintagepurpur">#A05E78</color>
+    <color name="Korallorange">#FF6F61</color>
 </resources>
