--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,6 +12,5 @@
     <color name="Smaragdgrün">#2AA282</color>
     <color name="Vintagepurpur">#A05E78</color>
     <color name="Korallorange">#FF6F61</color>
-    <color name="ic_launcher_background">#FFFFFFFF</color>  <!-- weiß für Light Mode -->
-
+    <color name="ic_launcher_background">#FF000000</color>  <!-- schwarz für Dark Mode -->
 </resources>
