--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -13,4 +13,5 @@
     <color name="Vintagepurpur">#A05E78</color>
     <color name="Korallorange">#FF6F61</color>
     <color name="ic_launcher_background">#FF000000</color>  <!-- schwarz für Dark Mode -->
+    <color name="splash_background">#121212</color> <!-- Dunkel, z.B. fast schwarz oder dunkelblau -->
 </resources>
